// Vitest Snapshot v1

exports[`defining a form > overriding defaults > inner wrappers > defaults to no wrapper 1`] = `
<form
  class="valid"
  id="form"
>
  
  
  <div
    data-test-id="field"
    data-test-type="interactive"
  />
  <input
    data-test-id="named"
    data-test-type="plain"
  >
    
    
  </input>
  <br
    data-test-type="plain"
  >
    
    
  </br>
  
  <!--v-if-->
  
</form>
`;

exports[`defining a form > overriding defaults > inner wrappers > wraps fields with a wrapper element 1`] = `
<form
  class="valid"
  id="form"
>
  
  
  <span
    class="inner-wrapper"
    element="[object Object]"
  />
  <span
    class="inner-wrapper"
    element="[object Object]"
  />
  <span
    class="inner-wrapper"
    element="[object Object]"
  />
  
  <!--v-if-->
  
</form>
`;

exports[`defining a form > renders html elements 1`] = `
"<form id=\\"form\\" class=\\"valid\\">
  <div data-test-id=\\"field\\" data-test-type=\\"interactive\\"></div><input data-test-id=\\"named\\" data-test-type=\\"plain\\"><br data-test-type=\\"plain\\">
</form>"
`;
